--- a/new_file.html
+++ b/new_file.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis libero. Dolorum quasi quam ex qui laboriosam iure inventore ipsum id consequatur corrupti accusantium nam tempore excepturi ratione consequuntur, itaque dolores fugiat, tempora modi autem vel incidunt natus vitae. Reprehenderit quasi veniam, molestiae totam labore cum! Nisi veniam reprehenderit unde nulla maxime dolor distinctio, omnis voluptas ullam dicta molestiae doloribus iusto expedita qui aperiam voluptatem dolorum nihil est eum porro nemo ad. Reiciendis cumque pariatur eius quo nostrum.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis libero. Dolorum quasi quam ex qui
+        laboriosam iure inventore ipsum id consequatur corrupti accusantium nam tempore excepturi ratione consequuntur,
+        itaque dolores fugiat, tempora modi autem vel incidunt natus vitae. Reprehenderit quasi veniam, molestiae totam
+        labore cum! Nisi veniam reprehenderit unde nulla maxime dolor distinctio, omnis voluptas ullam dicta molestiae
+        doloribus iusto expedita qui aperiam voluptatem dolorum nihil est eum porro nemo ad. Reiciendis cumque pariatur
+        eius quo nostrum.</p>
+
+        <div>div element</div>
+
+
 </body>
+
 </html>
