--- a/new_file.html
+++ b/new_file.html
@@ -15,10 +15,7 @@
         doloribus iusto expedita qui aperiam voluptatem dolorum nihil est eum porro nemo ad. Reiciendis cumque pariatur
         eius quo nostrum.</p>
       
-        <div>hello</div>
-       
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
+       <div>hello!</div>
 
 
 </body>
