--- a/testing2.html
+++ b/testing2.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+     <div>i</div>
+     <h1>heading1 in newbranch</h1>
+     <p>Lorem ipsum dolor sit amet.</p>
+
     
 </body>
 </html>
