--- a/testing2.html
+++ b/testing2.html
@@ -9,6 +9,7 @@
      <div>i</div>
      <h1>heading1 in newbranch</h1>
      <p>Lorem ipsum dolor sit amet.</p>
+     <h2>heading 2</h2>
 
     
 </body>
